--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,314 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Original+Surfer&family=Philosopher:wght@400;700&display=swap');
+
+@font-face {
+  font-family: 'OndineRegular';
+  src: url('./assets/fonts/OndineRegular.ttf');
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none !important;
+  list-style-type: none !important;
+  box-sizing: border-box !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ff_Montserrat {
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ff_Original_Surfer {
+  font-family: 'Original Surfer';
 }
 
-.App-link {
-  color: #61dafb;
+.ff_Philosopher {
+  font-family: 'Philosopher', sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.ff_OndineRegular {
+  font-family: 'OndineRegular';
+}
+
+:root {
+  /* ==================== color  */
+  --color-blue: #07031D;
+  --color-purple: #2F015B;
+  --color-purpleGrident: linear-gradient(126.14deg, #AA1FFE 3.66%, #DD22E6 95.92%);
+  --color-gray-grident: linear-gradient(0deg, #212121, #212121), linear-gradient(0deg, #565656, #565656);
+  --color-gray: #565656;
+  /* =================== fs */
+  --text-xsm: 12px;
+  --text-sm: 14px;
+  --text-md: 16px;
+  --text-lg: 20px;
+  --text-xl: 24px;
+  --text-xl2: 32px;
+  --text-xl3: 35px;
+  --text-xl4: 48px;
+  --text-xl5: 80px;
+  /* ========================= fw */
+  --fw-bolder: 800;
+}
+
+/* ========================== fw */
+.fw_bolder {
+  font-weight: var(--fw-bolder);
+}
+
+.bg_blue {
+  background-color: var(--color-blue);
+}
+
+.bg_purple {
+  background-color: var(--color-purple);
+}
+
+.text_purpleGrident {
+  background: var(--color-purpleGrident);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  --text-fill-color: transparent;
+}
+
+.bg_purpleGrident {
+  background: var(--color-purpleGrident);
+}
+
+.bg_gray {
+  background-color: var(--color-gray);
+}
+
+.bg_grayGrident {
+  background-color: var(--color-gray-grident);
+}
+
+/* ================================== fs */
+.fs_xsm {
+  font-size: var(--text-xsm);
+}
+
+.fs_sm {
+  font-size: var(--text-sm);
+}
+
+.fs_md {
+  font-size: var(--text-md);
+}
+
+.fs_lg {
+  font-size: var(--text-lg);
+}
+
+.fs_xl {
+  font-size: var(--text-xl);
+}
+
+.fs_xl2 {
+  font-size: var(--text-xl2);
+}
+
+.fs_xl3 {
+  font-size: var(--text-xl3);
+}
+
+.fs_xl4 {
+  font-size: var(--text-xl4);
+}
+
+.fs_xl5 {
+  font-size: var(--text-xl5);
+}
+
+/* ==================================== nav =============================== */
+
+.gift_size {
+  height: 28.43px;
+  width: 31.17px;
+}
+
+.line {
+  height: 3px;
+  width: 35px;
+  background-color: white;
+  display: inline-block;
+}
+
+.ms_n100 {
+  margin-left: -100%;
+}
+
+/* ------------------------------------------------------------- */
+
+.nav_open {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 99;
+  top: 0%;
+  left: 0%;
+  background-color: #6d22b4;
+  transition: all 0.3s linear;
+}
+
+.z_index_100 {
+  z-index: 100;
+}
+
+.bg_black {
+  background-color: #AA1FFE;
+}
+
+.text_strokeWhite:hover {
+  -webkit-text-stroke: 1px;
+  -webkit-text-fill-color: white;
+}
+
+.input_nav {
+  border: 1.5px solid #565656;
+  border-radius: 16px;
+  background: linear-gradient(0deg, #212121, #212121),
+    linear-gradient(0deg, #565656, #565656);
+}
+
+input:focus {
+  outline: transparent !important;
+}
+
+.placeholderColor::placeholder {
+  color: rgba(255, 255, 255, 0.842) !important;
+  font-size: var(--text-xsm);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+}
+
+.search_btn_width {
+  width: 12.16px;
+  height: 12.16px;
+}
+
+.position_search_btn {
+  top: 35%;
+  right: 6%;
+}
+
+.pe_30 {
+  padding-right: 30px;
+}
+
+.border_radius40 {
+  border-radius: 40px;
+}
+
+.p_nav_signIn {
+  padding-left: 43px;
+  padding-right: 43px;
+  padding-top: 15px;
+  padding-bottom: 12px;
+}
+
+/* ============ hero */
+.hero_bg {
+  background-image: url("./assets/img/png/hero_bg.png");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.h_700 {
+  height: 250px;
+}
+
+.end_n30 {
+  right: 0%;
+}
+
+.z_index_n1 {
+  z-index: 1;
+}
+
+.z_index_2 {
+  z-index: 2;
+}
+
+/* ============products */
+.w_164 {
+  width: 164px;
+}
+
+.productsHover img:hover {
+  outline: 2px solid #AA1FFE;
+  border-radius: 50%;
+}
+
+/* =====================aboutus */
+.aboutUsBG {
+  background-image: url('./assets/img/png/about_us_bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg_filter {
+  background: rgba(22, 15, 47, 0.5);
+  backdrop-filter: blur(9px);
+  border-radius: 10px;
+}
+
+.border_left {
+  border-left: 4px solid #BA20F7;
+}
+
+.d_grid {
+  display: grid;
+  /* grid-template-columns: auto;
+  grid-template-rows: auto; */
+  column-gap: 13.13px;
+  row-gap: 13.13px;
+}
+
+.grid_iteam1 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.grid_iteam2 {
+  grid-column: 1/3;
+  grid-row: 2/5;
+}
+
+.grid_iteam3 {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.grid_iteam4 {
+  grid-column: 2/3;
+  grid-row: 4/6;
+}
+
+.grid_iteam5 {
+  grid-column: 3/4;
+  grid-row: 3/5;
+}
+
+.border_radius10 {
+  border-radius: 10px;
+  border-top: 1px solid #401A68;
+  border-bottom: 1px solid #401A68;
+}
+
+/* ============================ ourRangeBG */
+.ourRangeBG {
+  background-image: url('./assets/img/png/ourRange.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* ==================================== */
+@media (min-width:1200px) {
+  .nav_open {
+    all: unset;
   }
 }
