--- a/src/App.css
+++ b/src/App.css
@@ -272,7 +272,22 @@ textarea:focus {
   height: 239.73px;
 }
 
+.heroPandaShadow {
+  background: linear-gradient(180deg, #07031D 37.24%, rgba(7, 3, 29, 0.01) 88.23%);
+  transform: matrix(1, 0, 0, -1, 0, 0);
+  height: 195px;
+  width: 100%;
+  z-index: 2;
+}
 
+.positon_shadow {
+  bottom: -10px;
+  right: 0;
+}
+
+.z_index_3 {
+  z-index: 3;
+}
 
 /* ============products */
 .w_164 {
@@ -916,7 +931,7 @@ textarea:focus {
   position: relative;
 }
 
-.nav_lineAnimation :nth-child(1) {
+/* .nav_lineAnimation :nth-child(1) {
   transform: translateY(11px) rotate(45deg);
 }
 
@@ -926,7 +941,7 @@ textarea:focus {
 
 .nav_lineAnimation :nth-child(2) {
   opacity: 0;
-}
+} */
 
 /*
 #hamburger-1.is-active .line:nth-child(1) {}
