--- a/src/App.css
+++ b/src/App.css
@@ -289,6 +289,14 @@ textarea:focus {
   z-index: 3;
 }
 
+.hoverBtn {
+  transition: 0.2s ease-in-out all;
+}
+
+.hoverBtn:hover {
+  box-shadow: 0px 2px 15px #b143f6;
+}
+
 /* ============products */
 .w_164 {
   width: 164px;
