--- a/src/App.css
+++ b/src/App.css
@@ -267,11 +267,6 @@ textarea:focus {
   border-radius: 0px 0px 0px 350px;
 }
 
-.h_w_gif {
-  width: 164.21px;
-  height: 239.73px;
-}
-
 .heroPandaShadow {
   background: linear-gradient(180deg, #07031D 37.24%, rgba(7, 3, 29, 0.01) 88.23%);
   transform: matrix(1, 0, 0, -1, 0, 0);
@@ -321,8 +316,14 @@ textarea:focus {
   border-radius: 10px;
 }
 
-.border_left {
-  border-left: 4px solid #BA20F7;
+.border_left ::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 5%;
+  height: 90%;
+  width: 4px;
+  background-color: #BA20F7;
 }
 
 .d_grid {
@@ -410,11 +411,6 @@ textarea:focus {
 .outlinePurrple:hover {
   outline: 2px solid #411A68;
 }
-
-/* .hover_mushroom:hover .mushroomImg {
-  background: #b266e1;
-  filter: blur(11.976px);
-} */
 
 /* =========== productsDetials */
 .w_50 {
@@ -607,6 +603,28 @@ textarea:focus {
   background: linear-gradient(126.14deg, #6900A8 3.66%, #98019F 95.92%);
 }
 
+.footerBtn:hover {
+  color: #ffffff;
+}
+
+.footerBtn::after {
+  content: "";
+  position: absolute;
+  background-color: #ffffff;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 50%;
+}
+
+.footerBtn:hover::after {
+  content: "";
+  width: 100%;
+  transition: 0.4s;
+  transform: translateX(-50%);
+}
+
+
 /* ================== contact */
 .Contact_bg {
   background-image: url('./assets/img/png/contect_bg.png');
@@ -621,6 +639,13 @@ textarea:focus {
   backdrop-filter: blur(9px);
   border-radius: 4px;
   color: white !important;
+}
+
+.position_gif {
+  left: -2%;
+  z-index: 1;
+  top: 9%;
+  width: 35%;
 }
 
 /* ==================================== */
@@ -663,17 +688,19 @@ textarea:focus {
     --text-xl5: 55px;
   }
 
-  .position_gif_sm {
-    top: -75px;
-    left: -50px;
-  }
-
   .w_countDown {
     width: 14%;
   }
 
   .mb_n20 {
     margin-top: -15%;
+  }
+}
+
+@media (max-width:768px) {
+  .grid_iteam2 {
+    grid-column: 1/3;
+    grid-row: 2/4 !important;
   }
 }
 
@@ -690,10 +717,6 @@ textarea:focus {
     --text-xl5: 65px;
   }
 
-  .position_gif_md {
-    top: -20px;
-    left: -10px;
-  }
 
   .w_countDown {
     width: 8%;
@@ -705,10 +728,7 @@ textarea:focus {
 }
 
 @media (min-width:992px) {
-  .position_gif_lg {
-    top: 42px;
-    left: 30px;
-  }
+
 
   .mb_n20 {
     margin-top: -10%;
@@ -716,10 +736,7 @@ textarea:focus {
 }
 
 @media (max-width:1200px) {
-  .mx_max_xl_auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
+
 
   .min_vh_max_xl {
     min-height: 100vh;
@@ -743,11 +760,6 @@ textarea:focus {
     --text-xl5: 75px;
   }
 
-  .position_gif_xl {
-    top: -20px;
-    left: -10px;
-  }
-
   .mb_n20 {
     margin-top: -9%;
   }
@@ -764,11 +776,6 @@ textarea:focus {
     --text-xl3: 35px;
     --text-xl4: 48px;
     --text-xl5: 80px;
-  }
-
-  .position_gif_xxl {
-    top: 0px;
-    left: 0px;
   }
 
 }
@@ -939,7 +946,7 @@ textarea:focus {
   position: relative;
 }
 
-/* .nav_lineAnimation :nth-child(1) {
+.nav_lineAnimation :nth-child(1) {
   transform: translateY(11px) rotate(45deg);
 }
 
@@ -949,9 +956,13 @@ textarea:focus {
 
 .nav_lineAnimation :nth-child(2) {
   opacity: 0;
-} */
+}
 
 /*
 #hamburger-1.is-active .line:nth-child(1) {}
 
 #hamburger-1.is-active .line:nth-child(3) {} */
+.position_crossNav {
+  top: 90px;
+  right: 10px;
+}
