--- a/src/App.css
+++ b/src/App.css
@@ -412,9 +412,44 @@ textarea:focus {
   outline: 2px solid #411A68;
 }
 
+.bgMushroomShadow {
+  background-color: #9F00FF;
+  filter: blur(121.976px);
+  width: 20%;
+  bottom: 0;
+  right: 45%;
+  height: 330px;
+  opacity: 0;
+  transition: 0.1s ease-in-out all;
+}
+
+.hover_mushroom:hover .bgMushroomShadow {
+  opacity: 1;
+}
+
 /* =========== productsDetials */
 .w_50 {
   width: 50px;
+}
+
+.purpleBottleShadow {
+  background: #9F00FF;
+  filter: blur(121.976px);
+  width: 80%;
+  bottom: 12%;
+  left: 10%;
+  z-index: 2;
+  height: 200px;
+  opacity: 0;
+  transition: 0.2s ease-in-out all;
+}
+
+.hoverShadowOpicity:hover .purpleBottleShadow {
+  opacity: 1;
+}
+
+.tranisition_02 {
+  transition: 0.2s ease-in-out all;
 }
 
 /* ==============canadaMail */
