--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
   text-decoration: none !important;
   list-style-type: none !important;
   box-sizing: border-box !important;
-  /* outline: 2px red solid; */
 }
 
 .ff_Montserrat {
@@ -684,6 +683,99 @@ textarea:focus {
 }
 
 /* ==================================== */
+.overflow_hidden_preloder {
+  overflow: hidden;
+  position: relative;
+}
+
+.nav_lineAnimation :nth-child(1) {
+  transform: translateY(11px) rotate(45deg);
+}
+
+.nav_lineAnimation :nth-child(3) {
+  transform: translateY(-11px) rotate(-45deg);
+}
+
+.nav_lineAnimation :nth-child(2) {
+  opacity: 0;
+}
+
+.position_crossNav {
+  top: 90px;
+  right: 10px;
+}
+
+.prupleShadow {
+  background: #9F00FF;
+  filter: blur(134.5px);
+  width: 20%;
+  height: 20%;
+  z-index: 2;
+  animation: purpleShadow 3s ease-in-out alternate;
+}
+
+.prupleShadow_10 {
+  background: #9F00FF;
+  filter: blur(134.5px);
+  width: 15%;
+  height: 15%;
+  z-index: 2;
+  animation: purpleShadow 3s ease-in-out alternate;
+}
+
+.top_50 {
+  top: 50%;
+}
+
+.color_back_to_top {
+  background: linear-gradient(126.14deg, #AA1FFE 3.66%, #DD22E6 95.92%);
+  width: 50px;
+  height: 50px;
+  outline: none;
+  border: none;
+  z-index: 9999;
+  padding: 10px 10px 20px 10px;
+}
+
+.loding_position {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999999;
+}
+
+.pl {
+  display: block;
+  width: 8em;
+  height: 8em;
+}
+
+.pl__ring,
+.pl__ball1,
+.pl__ball2 {
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  transform-origin: 32px 32px;
+}
+
+.pl__ring {
+  animation-name: ring;
+}
+
+.pl__ball1 {
+  animation-name: ball1;
+}
+
+.pl__ball2 {
+  animation-name: ball2;
+}
+
+/* ==================================== */
 @media (max-width:576px) {
   .rightLeave {
     right: 0% !important;
@@ -751,7 +843,6 @@ textarea:focus {
     --text-xl4: 42px;
     --text-xl5: 65px;
   }
-
 
   .w_countDown {
     width: 8%;
@@ -833,54 +924,6 @@ textarea:focus {
   100% {
     transform: translateX(100%);
   }
-}
-
-.color_back_to_top {
-  background: linear-gradient(126.14deg, #AA1FFE 3.66%, #DD22E6 95.92%);
-  width: 50px;
-  height: 50px;
-  outline: none;
-  border: none;
-  z-index: 9999;
-  padding: 10px 10px 20px 10px;
-}
-
-.loding_position {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999999;
-}
-
-.pl {
-  display: block;
-  width: 8em;
-  height: 8em;
-}
-
-.pl__ring,
-.pl__ball1,
-.pl__ball2 {
-  animation-duration: 2s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  transform-origin: 32px 32px;
-}
-
-.pl__ring {
-  animation-name: ring;
-}
-
-.pl__ball1 {
-  animation-name: ball1;
-}
-
-.pl__ball2 {
-  animation-name: ball2;
 }
 
 /* Dark theme  */
@@ -974,48 +1017,4 @@ textarea:focus {
   to {
     transform: rotate(339deg);
   }
-}
-
-.overflow_hidden_preloder {
-  overflow: hidden;
-  position: relative;
-}
-
-.nav_lineAnimation :nth-child(1) {
-  transform: translateY(11px) rotate(45deg);
-}
-
-.nav_lineAnimation :nth-child(3) {
-  transform: translateY(-11px) rotate(-45deg);
-}
-
-.nav_lineAnimation :nth-child(2) {
-  opacity: 0;
-}
-
-.position_crossNav {
-  top: 90px;
-  right: 10px;
-}
-
-.prupleShadow {
-  background: #9F00FF;
-  filter: blur(134.5px);
-  width: 20%;
-  height: 20%;
-  z-index: 2;
-  animation: purpleShadow 3s ease-in-out alternate;
-}
-
-.prupleShadow_10 {
-  background: #9F00FF;
-  filter: blur(134.5px);
-  width: 15%;
-  height: 15%;
-  z-index: 2;
-  animation: purpleShadow 3s ease-in-out alternate;
-}
-
-.top_50 {
-  top: 50%;
 }
